--- a/Backend/.env
+++ b/Backend/.env
@@ -1,10 +1,18 @@
+# Server Port
 PORT=8000
+
+# JWT Secret for token signing
 JWT_SECRET=govind@14
+
+# MongoDB Connection Strings
 MONGO_ATLAS=mongodb+srv://govindanjana2004:7kJagUAvM3T75xO4@cluster0.izc7nff.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 MONGO_URL=mongodb://127.0.0.1:27017/mydb
+
+# Gmail for sending emails (e.g., OTP, verification)
 EMAIL_USER=govindanjana2004@gmail.com
 EMAIL_PASS=dbad zzub dzpy xjxl
 
+# Cloudinary credentials for image uploads
 CLOUD_NAME=dzquchr8o
 API_KEY=129483357199967
 API_SECRET=fQ60MpuR0zdLwGXGPmhdp_SQ-d8
