Create Payment Gateway

--- a/Backend/.env
+++ b/Backend/.env
@@ -16,3 +16,7 @@ EMAIL_PASS=dbad zzub dzpy xjxl
 CLOUD_NAME=dzquchr8o
 API_KEY=129483357199967
 API_SECRET=fQ60MpuR0zdLwGXGPmhdp_SQ-d8
+
+
+RAZORPAY_KEY_ID=your_test_key_id
+RAZORPAY_SECRET=your_test_secret_key
