Create category Add

--- a/Backend/.env
+++ b/Backend/.env
@@ -20,3 +20,7 @@ API_SECRET=fQ60MpuR0zdLwGXGPmhdp_SQ-d8
 
 RAZORPAY_KEY_ID=your_test_key_id
 RAZORPAY_SECRET=your_test_secret_key
+
+
+SHIPROCKET_EMAIL=govindanjana2004@gmail.com
+SHIPROCKET_PASSWORD=Govind@1414
