--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^2.2.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "graphql": "^16.11.0",
@@ -32,6 +33,7 @@
     "nodemailer": "^7.0.9",
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
-    "resend": "^6.3.0"
+    "resend": "^6.3.0",
+    "twilio": "^5.10.4"
   }
 }
