--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,6 +34,7 @@
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
     "resend": "^6.3.0",
-    "twilio": "^5.10.4"
+    "twilio": "^5.10.4",
+    "validator": "^13.15.20"
   }
 }
