--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "express-session": "^1.18.2",
+    "google-auth-library": "^10.5.0",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
@@ -32,6 +34,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.9",
     "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "razorpay": "^2.9.6",
     "resend": "^6.3.0",
     "twilio": "^5.10.4",
